# planning-code-search

./: .gitignore  README.md  main.py  pyproject.toml  render.yaml  sb423.txt
backend/: address_lookup.py  api.py  init_db.py  load.py  query.py  test.py
corpus/: sb330.txt
corpus/letters_of_determination/: 1 Ferry Bldg, Suite 201 & 301.txt  1000 Fulton Street.txt  1001 Pine St (#610 & #611).txt  101 Utah Street (re-issued).txt  101 Utah Street.txt  1011 03rd Street.txt  1016 Howard Street.txt  1040 Grant Ave.txt  111 Taylor Street.txt  1140 Harrison Street.txt  1145 Polk Street.txt  1167-1169 Mission Street (Reissued).txt  1167-1169 Mission Street.txt  1190 Bryant Street.txt  1241 Stockton Street.txt  125 Bayshore Blvd, 1925 Evans Avenue, & 600 25th Street.txt  1310 Junipero Serra Blvd.txt  1435 26th Avenue.txt  145 Jefferson Street.txt  1501 Waller Street.txt  1515 Waller Street.txt  1525 Pine Street.txt  1657-1659 Mason Street.txt  1700 California St, Suite 570.txt  1769 Folsom St.txt  1801 Lombard Street.txt  1888 Mission Street.txt  1899 Green Street.txt  1964 Post Street.txt  201 California Street.txt  2040 Fillmore Street.txt  207 Walnut Street.txt  2270 McKinnon Avenue.txt  233 Geary Street.txt  2400 Noriega Street.txt  245 Valencia Street.txt  245-265 Winston Drive, 3201-3251 20th Avenue and 850 La Playa.txt  25 Division Street.txt  2551-2557 Mission Street.txt  (+60 more)
housing/: Untitled.ipynb  alex.ipynb  html split.ipynb  zoning.ipynb
tests/: aggregate_score.txt  benchmark.py  benchmark_data.csv  test_benchmark.py  test_dg.py  test_extract_address.py  test_load.py
(+3 files in other folders)
