[tool.poetry]
name = "housing"
version = "0.1.0"
description = ""
authors = ["Alex Shadley <shadleyalex@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
langchain = "^0.0.344"
openai = "^1.3.7"
tiktoken = "^0.5.1"
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"
python-multipart = "^0.0.6"
tika = "^2.6.0"
pypdf = "^3.17.1"
lxml = "^4.9.3"
beautifulsoup4 = "^4.12.2"
pinecone-client = "^2.2.4"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
pandas = "^2.1.4"
geopandas = "^0.14.1"
shapely = "^2.0.2"
nose = "^1.3.7"
ragas = "^0.0.22"
pygeocodio = "^1.4.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
